<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>

    <item
        android:id="@+id/nav_compare"
        android:icon="@drawable/ic_compare"
        android:title="@string/compare"/>

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/messages"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"/>

</menu>
